--- a/index.html
+++ b/index.html
@@ -3,63 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Flexbox</title>
-
+    <link rel="stylesheet" href="/style.css">
+    <title>Aula - Flexbox</title>
 </head>
-
-<!-- Tipo 1 -->
 <body>
-    <section id="container">
-        <div class="item article-01">
-            Primeiro Item
-        </div>
+    <div class="header">  <!-- Elemento pai do menu de navegação -->
+        <a href="/img/baleia.jpg">Logo</a>
+            <div class="nav"> <!-- Elemento filho: menu de navegação -->
+                <ul class="menu">
+                    <li><a href="#.html"> Home </a></li>
+                    <li><a href="#.html"> Sobre </a></li> 
+                    <li><a href="#.html"> Contato </a></li>
+                </ul>
+            </div>
+    </div>
+    <h1>Curiosidades sobre os Animais</h1>
 
-        <div class="item article-02">
-            Segundo Item
-        </div>
+    <div id="container">
+        <div class="item img-1">
+            <img src="/img/baleia.jpg" alt="img-GOLFINHO" title="ISSO É UM GOLFINHO, NÃO UMA BALEIA">
+            <h4>Legenda</h4></div>
 
-        <div class="item article-03">
-            Terceiro Item
-        </div>
 
-        <div class="item article-04">
-            Quarto Item
-        </div>
-    </section>
+        <div class="item img-2">
+            <img src="/img/cavalo.jpg" alt="img-cavalo" title="ISSO não É UM GOLFINHO, NÃO UMA BALEIA">
+            <h4>Legenda</h4></div>
 
-<!-- Tipo 2 -->
-<br><br><br><br><br><br><br>
 
-    <section id="container2">
-        <div class="item article-01">
-            Primeiro Item
-        </div>
+        <div class="item img-3">
+            <img src="/img/jacare.jpg" alt="img-jacare" title="ISSO não É UM GOLFINHO, NÃO UMA BALEIA">
+            <h4>Legenda</h4></div>
 
-        <div class="item article-02">
-            Segundo Item
-        </div>
 
-        <div class="item article-03">
-            Terceiro Item
-        </div>
-    </section>
+        <div class="item img-4">
+            <img src="/img/lagarto.jpg" alt="img-lagarto" title="ISSO não É UM GOLFINHO, NÃO UMA BALEIA">
+            <h4>Legenda</h4></div>
 
-<!-- Tipo 3 -->
-<br><br><br><br><br><br><br>
 
-    <section id="container3">
-        <div class="item article-01">
-            Primeiro Item
-        </div>
+        <div class="item img-5">
+            <img src="/img/leopardo.jpg" alt="img-leopardo" title="ISSO não É UM GOLFINHO, NÃO UMA BALEIA">
+            <h4>Legenda</h4></div>
 
-        <div class="item article-02">
-            Segundo Item
-        </div>
 
-        <div class="item article-03">
-            Terceiro Item
-        </div>
-    </section>
+        <div class="item img-6">
+            <img src="/img/rinoceronte.jpg" alt="img-rinoceronte" title="ISSO não É UM GOLFINHO, NÃO UMA BALEIA">
+            <h4>Legenda</h4></div>
+    </div>
+
 </body>
 </html>
